# pollux

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel
pollux/assets/: BUILD.bazel
pollux/backends/: BUILD.bazel  gwork.h
pollux/backends/gwork_sdl2/: BUILD.bazel  backend.cc  backend.h
pollux/browser/manager/: BUILD.bazel  browser_manager.h  sdlcef_browser_manager.cc  sdlcef_browser_manager.h
pollux/client/: BUILD.bazel  Info.plist  main.mm
pollux/client/states/: BUILD.bazel  client_room.cc  client_room.h
pollux/common/: BUILD.bazel  event.h
pollux/core/manager/: BUILD.bazel  core_manager.h  default_core_manager.cc  default_core_manager.h
pollux/geom/: BUILD.bazel  rect.h  vector.h
pollux/networking/: BUILD.bazel  constants.h  net.proto  proto_deserialization.cc  proto_deserialization.h  proto_serialization.cc  proto_serialization.h
pollux/networking/client/: BUILD.bazel  client.cc  client.h
pollux/networking/server/: BUILD.bazel  server.cc  server.h
pollux/render/: BUILD.bazel  sprite.h  spritesheet.h  texture.h
pollux/render/manager/: BUILD.bazel  render_manager.h
pollux/resources/manager/: BUILD.bazel  default_resource_manager.cc  default_resource_manager.h  mac_resource_manager.cc  mac_resource_manager.h  resource_manager.h
pollux/server/: BUILD.bazel  main.cc
pollux/server/states/: BUILD.bazel  server_room.cc  server_room.h
pollux/state/: BUILD.bazel  constants.h  manager.cc  manager.h  state.cc  state.h
pollux/ui/elements/: BUILD.bazel  viewport_2d.h
pollux/ui/manager/: BUILD.bazel  ui_manager.h  ui_state.h
pollux/ui/states/client/: BUILD.bazel  client_login_ui.h  primary_client_ui.h
pollux/ui/states/client/gwork/: BUILD.bazel  gwork_client_login_ui.cc  gwork_client_login_ui.h  gwork_primary_client_ui.cc  gwork_primary_client_ui.h
