# Donk Project
# Copyright (c) 2021 Warriorstar Orion <orion@snowfrost.garden>
# SPDX-License-Identifier: MIT
package_group(
    name = "pollux_pkg",
    packages = [
        "//pollux/assets/...",
        "//pollux/backends/...",
        "//pollux/browser/...",
        "//pollux/client/...",
        "//pollux/common/...",
        "//pollux/core/...",
        "//pollux/networking/...",
        "//pollux/render/...",
        "//pollux/resources/...",
        "//pollux/server/...",
        "//pollux/state/...",
        "//pollux/ui/...",
    ],
)

config_setting(
    name = "darwin",
    constraint_values = [
        "@bazel_tools//platforms:osx",
        "@bazel_tools//platforms:x86_64",
    ],
)

config_setting(
    name = "windows",
    values = {"cpu": "x64_windows"},
)
