# Donk Project
# Copyright (c) 2021 Warriorstar Orion <orion@snowfrost.garden>
# SPDX-License-Identifier: MIT
load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//:pollux_pkg"])

cc_library(
    name = "client",
    srcs = ["client.cc"],
    hdrs = ["client.h"],
    copts = select({
        "//:windows": ["/MD"],
        "//:darwin": [],
    }),
    linkopts = select({
        "//:windows": [
            "-DEFAULTLIB:ws2_32.lib",
        ],
        "//:darwin": [],
    }),
    deps = [
        "//pollux/networking",
        "//pollux/networking:net_cc_proto",
        "@enet-plus",
        "@spdlog",
    ],
)
