# Donk Project
# Copyright (c) 2021 Warriorstar Orion <orion@snowfrost.garden>
# SPDX-License-Identifier: MIT
load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//:pollux_pkg"])

cc_library(
    name = "manager",
    hdrs = [
        "render_manager.h",
    ],
    deps = [
        "//pollux/common:event",
        "//pollux/render",
        "//pollux/geom",
        "@donk//image",
    ],
)
