# Donk Project
# Copyright (c) 2021 Warriorstar Orion <orion@snowfrost.garden>
# SPDX-License-Identifier: MIT
load("@rules_cc//cc:defs.bzl", "cc_library")
load("@donk//:defs.bzl", "DARWIN_DEFAULT_COPTS", "WINDOWS_DEFAULT_COPTS")

package(default_visibility = ["//:pollux_pkg"])

cc_library(
    name = "default",
    srcs = [
        "default_resource_manager.cc",
    ],
    hdrs = [
        "default_resource_manager.h",
    ],
    copts = select({
        "//:windows": WINDOWS_DEFAULT_COPTS,
        "//:darwin": DARWIN_DEFAULT_COPTS,
    }),
    deps = [
        ":manager",
        "//pollux/core/manager",
        "//pollux/geom",
        "//pollux/render",
        "//pollux/state",
        "@bazel_tools//tools/cpp/runfiles",
        "@donk//image",
        "@donk//interpreter",
        "@donk//interpreter/environment:runfiles",
        "@spdlog",
    ],
)

cc_library(
    name = "mac",
    srcs = [
        "mac_resource_manager.cc",
    ],
    hdrs = [
        "mac_resource_manager.h",
    ],
    copts = DARWIN_DEFAULT_COPTS,
    deps = [
        ":manager",
        "//pollux/core/manager",
        "//pollux/geom",
        "//pollux/render",
        "//pollux/state",
        "@donk//image",
        "@donk//interpreter",
        "@donk//interpreter/environment:filesystem",
        "@sdl2",
        "@spdlog",
    ],
)

cc_library(
    name = "manager",
    hdrs = ["resource_manager.h"],
    deps = [
        "//pollux/geom",
        "@donk//core",
        "@donk//image",
        "@donk//interpreter/environment",
    ],
)
