# Donk Project
# Copyright (c) 2021 Warriorstar Orion <orion@snowfrost.garden>
# SPDX-License-Identifier: MIT
load("@rules_cc//cc:defs.bzl", "cc_library")
load("@donk//:defs.bzl", "DARWIN_DEFAULT_COPTS", "WINDOWS_DEFAULT_COPTS")

package(default_visibility = ["//:pollux_pkg"])

cc_library(
    name = "server_room",
    srcs = ["server_room.cc"],
    hdrs = ["server_room.h"],
    copts = select({
        "//:windows": WINDOWS_DEFAULT_COPTS,
        "//:darwin": DARWIN_DEFAULT_COPTS,
    }),
    deps = [
        "//pollux/core/manager",
        "//pollux/networking",
        "//pollux/networking:net_cc_proto",
        "//pollux/networking:serialization",
        "//pollux/networking/server",
        "//pollux/state",
        "@donk//interpreter",
        "@enet-plus",
        "@fmtlib",
        "@spdlog",
        "@dtpo",
    ],
)
