# Donk Project
# Copyright (c) 2021 Warriorstar Orion <orion@snowfrost.garden>
# SPDX-License-Identifier: MIT
load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//:pollux_pkg"])

cc_library(
    name = "client",
    hdrs = [
        "client_login_ui.h",
        "primary_client_ui.h",
    ],
    deps = [
        "//pollux/core/manager",
        "//pollux/render",
        "//pollux/geom",
        "//pollux/ui/elements",
        "//pollux/ui/manager",
    ],
)
